SCMNEW-42 refactor(uaa-password): support legacy match and modern rehash